[gd_scene load_steps=47 format=3 uid="uid://de40i1ga5235w"]

[ext_resource type="Script" uid="uid://rvjyk781nx5x" path="res://Scenes/player.gd" id="1_y8w33"]
[ext_resource type="Shader" uid="uid://dufwfkrw0frc3" path="res://Resources/Shader/Based/flash_white.gdshader" id="3_3smsa"]
[ext_resource type="Script" uid="uid://bxqshg7cicyof" path="res://addons/shaker/src/Vector2/shaker_component2D.gd" id="4_f1ek2"]
[ext_resource type="Texture2D" uid="uid://bx5b80acl8v7c" path="res://Assets/Players/Satyr.png" id="5_fkybt"]
[ext_resource type="Script" uid="uid://bpc2eurc3rhcy" path="res://addons/shaker/data/Vector2/BaseShakerType2D.gd" id="5_tx1dd"]
[ext_resource type="Shader" uid="uid://bn82lc46dctgb" path="res://Resources/Shader/Based/hurt_sfx.gdshader" id="5_x3wgy"]
[ext_resource type="Script" uid="uid://dxxcbjkash0oy" path="res://addons/shaker/data/Single/BaseShakerType1D.gd" id="6_gymyn"]
[ext_resource type="Script" uid="uid://bx6dutr23v2k6" path="res://addons/shaker/data/Vector2/ShakerTypeSineWave2D.gd" id="6_tx1dd"]
[ext_resource type="Script" uid="uid://dyj2l7dp67hio" path="res://addons/shaker/data/Vector2/ShakerPreset2D.gd" id="7_pu2lt"]
[ext_resource type="PackedScene" uid="uid://crk1rf8hduomu" path="res://Scenes/GUI/dash_timer_ui.tscn" id="10_tx1dd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8erm5"]
shader = ExtResource("3_3smsa")
shader_parameter/flash = false
shader_parameter/flash_strength = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("5_fkybt")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("5_fkybt")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("5_fkybt")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("5_fkybt")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("5_fkybt")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("5_fkybt")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("5_fkybt")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("5_fkybt")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("5_fkybt")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("5_fkybt")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("5_fkybt")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("5_fkybt")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("5_fkybt")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("5_fkybt")
region = Rect2(256, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("5_fkybt")
region = Rect2(288, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("5_fkybt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("5_fkybt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("5_fkybt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("5_fkybt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("5_fkybt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("5_fkybt")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("5_fkybt")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("5_fkybt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("5_fkybt")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("5_fkybt")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("5_fkybt")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("5_fkybt")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("5_fkybt")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("5_fkybt")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_58ae2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}],
"loop": false,
"name": &"dash",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivevv"]
radius = 11.6857

[sub_resource type="Resource" id="Resource_gymyn"]
script = ExtResource("6_tx1dd")
frequency = Vector2(5, 5)
phase = Vector2(1, 1)
amplitude = Vector2(15, 15)
offset = Vector2(0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64
metadata/_custom_type_script = "uid://bx6dutr23v2k6"

[sub_resource type="Resource" id="Resource_ukyrk"]
script = ExtResource("7_pu2lt")
PositionShake = Array[ExtResource("5_tx1dd")]([SubResource("Resource_gymyn")])
RotationShake = Array[ExtResource("6_gymyn")]([])
ScaleShake = Array[ExtResource("5_tx1dd")]([])
bake_internal = 64
__follow_timeline = false
metadata/_custom_type_script = "uid://dyj2l7dp67hio"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vgqql"]
size = Vector2(11, 15)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3smsa"]
shader = ExtResource("5_x3wgy")
shader_parameter/intensity = 1.714
shader_parameter/smoothness = 1.0
shader_parameter/vignette_color = Color(0.592157, 0, 0, 0.607843)
shader_parameter/opacity = 0.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 5
collision_mask = 64
motion_mode = 1
script = ExtResource("1_y8w33")
god_mode = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_8erm5")
sprite_frames = SubResource("SpriteFrames_58ae2")
animation = &"idle"
autoplay = "idle"
frame = 2
frame_progress = 0.040696

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_ivevv")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCDTimer" type="Timer" parent="."]
one_shot = true

[node name="WeaponSocket" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 1
position = Vector2(0, 3.72529e-09)
zoom = Vector2(2.5, 2.5)

[node name="Shaker" type="Node2D" parent="Camera2D"]
script = ExtResource("4_f1ek2")
duration = 0.3
fade_in = 0.0122591
fade_out = 1.31951
shakerPreset = SubResource("Resource_ukyrk")
metadata/_custom_type_script = "uid://bxqshg7cicyof"

[node name="HurtArea" type="Area2D" parent="."]
collision_mask = 0

[node name="HurtShape" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(1.5, 3.5)
shape = SubResource("RectangleShape2D_vgqql")

[node name="ScreenSfx" type="CanvasLayer" parent="."]

[node name="HurtSfx" type="ColorRect" parent="ScreenSfx"]
material = SubResource("ShaderMaterial_3smsa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DashTimerUI" parent="." instance=ExtResource("10_tx1dd")]
position = Vector2(-15, -14)
